# voile

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
contracts/advance-note/: Cargo.toml
contracts/advance-note/src/: lib.rs
contracts/counter-account/: Cargo.toml
contracts/counter-account/src/: lib.rs
contracts/increment-note/: Cargo.toml
contracts/increment-note/src/: lib.rs
contracts/mock-usdc-faucet/: Cargo.toml
contracts/mock-usdc-faucet/src/: lib.rs
contracts/settlement-note/: Cargo.toml
contracts/settlement-note/src/: lib.rs
contracts/voile-lp-pool/: Cargo.toml
contracts/voile-lp-pool/src/: lib.rs
contracts/voile-user-account/: Cargo.toml
contracts/voile-user-account/src/: lib.rs
integration/: Cargo.toml
integration/src/: helpers.rs  lib.rs  voile_helpers.rs
integration/tests/: counter_test.rs  voile_e2e_test.rs  voile_unit_test.rs
web-client/: README.md  package.json  tsconfig.json
web-client/src/: client.ts  config.ts  crypto.ts  demo.ts  index.ts  matching.ts  pricing.ts  types.ts
