[workspace]
members = [
    "contracts/counter-account",
    "contracts/increment-note",
    "contracts/voile-user-account",
    "contracts/voile-lp-pool",
    "contracts/settlement-note",
    "contracts/advance-note",
    "contracts/mock-usdc-faucet",
    "integration"
]
resolver = "2"
edition = "2021"

[workspace.dependencies]
miden = { version = "0.7" }