[package]
name = "integration"
version = "0.1.0"
edition = "2021"

[dependencies]
miden = { workspace = true }
cargo-miden = { version = "0.5" }
miden-client = { version = "0.12", features = ["tonic", "testing"] }
miden-client-sqlite-store = { version = "0.12", package = "miden-client-sqlite-store" }
miden-objects = { version = "0.12", default-features = false, features = ["testing"] }
miden-core = { version = "0.19" }
miden-testing = "0.12"
miden-mast-package = { version = "0.19", default_features = false }
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "macros", "fs"] }
rand = { version = "0.9" }
anyhow = "1.0"
