[package]
name = "integration"
version = "0.1.0"
edition = "2021"

[dependencies]
miden = { workspace = true }
cargo-miden = { version = "0.5" }
miden-client = { version = "0.13", features = ["tonic", "testing"] }
miden-client-sqlite-store = { version = "0.13", package = "miden-client-sqlite-store" }
miden-protocol = { version = "0.13", features = ["testing"] }
miden-core = { version = "0.20" }
miden-testing = "0.13"
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "macros", "fs"] }
rand = { version = "0.9" }
anyhow = "1.0"
