[package]
name = "advance-note"
version = "0.1.0"
edition = "2021"
description = "Voile Protocol - Advance note for USDC transfer to user"

[lib]
crate-type = ["cdylib"]

[dependencies]
miden = { workspace = true }

[package.metadata.component]
package = "miden:advance-note"

[package.metadata.miden.dependencies]
"miden:voile-lp-pool" = { path = "../voile-lp-pool" }

[package.metadata.component.target.dependencies]
"miden:voile-lp-pool" = { path = "../voile-lp-pool/target/generated-wit/" }

[package.metadata.miden]
project-kind = "note-script"
