[package]
name = "increment-note"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
miden = { workspace = true }

[package.metadata.component]
package = "miden:increment-note"

# Miden dependencies for cargo-miden build/linking
[package.metadata.miden.dependencies]
"miden:counter-account" = { path = "../counter-account" }

[package.metadata.component.target.dependencies]
"miden:counter-account" = { path = "../counter-account/target/generated-wit/" }

[package.metadata.miden]
project-kind = "note-script"