[package]
name = "mock-usdc-faucet"
version = "0.1.0"
edition = "2021"
description = "Voile Protocol - Mock USDC faucet for testing"

[lib]
crate-type = ["cdylib"]

[dependencies]
miden = { workspace = true }

[package.metadata.component]
package = "miden:mock-usdc-faucet"

[package.metadata.miden]
project-kind = "account"
supported-types = ["FungibleFaucet"]
