[package]
name = "settlement-note"
version = "0.1.0"
edition = "2021"
description = "Voile Protocol - Settlement note for automatic repayment"

[lib]
crate-type = ["cdylib"]

[dependencies]
miden = { workspace = true }

[package.metadata.component]
package = "miden:settlement-note"

[package.metadata.miden.dependencies]
"miden:voile-user-account" = { path = "../voile-user-account" }
"miden:voile-lp-pool" = { path = "../voile-lp-pool" }

[package.metadata.component.target.dependencies]
"miden:voile-user-account" = { path = "../voile-user-account/target/generated-wit/" }
"miden:voile-lp-pool" = { path = "../voile-lp-pool/target/generated-wit/" }

[package.metadata.miden]
project-kind = "note-script"
