[package]
name = "voile-lp-pool"
version = "0.1.0"
edition = "2021"
description = "Voile Protocol - LP Pool for providing stablecoin liquidity"

[lib]
crate-type = ["cdylib"]

[dependencies]
miden = { workspace = true }

[package.metadata.component]
package = "miden:voile-lp-pool"

[package.metadata.miden]
project-kind = "account"
supported-types = ["RegularAccountImmutableCode"]
